# tplog

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: enable_addr_sanitizer.cmake  enable_thread_sanitizer.cmake  read_project_version.cmake  set_if_undefined.cmake  silent_copy.cmake  tplog-config.cmake.in  version.h.in  win_copy_deps_to_target_dir.cmake
examples/: CMakeLists.txt
examples/easy_peasy/: CMakeLists.txt  main.cpp
include/tplog/: export.h  tplog.h
src/: tplog.cpp
tests/: CMakeLists.txt  dummy_test.cpp
